--- a/src/path_planning/maps/slam_maps/it2_last.yaml
+++ b/src/path_planning/maps/slam_maps/it2_last.yaml
@@ -1,7 +1,6 @@
-image: /home/yujin/PBL_Map/it2_last.pgm
-resolution: 0.050000
+image: it2_last.pgm
+resolution: 0.05
 origin: [-3.666302, -1.963480, 0.000000]
 negate: 0
 occupied_thresh: 0.65
 free_thresh: 0.196
-
