--- a/src/path_planning/config/local_costmap_params_robot_1.yaml
+++ b/src/path_planning/config/local_costmap_params_robot_1.yaml
@@ -8,4 +8,8 @@ local_costmap:
   height: 3.0
   resolution: 0.05
   static_map: false
+  plugins:
+    - {name: static_layer,    type: "costmap_2d::StaticLayer"}
+    - {name: obstacle_layer,  type: "costmap_2d::ObstacleLayer"}
+    - {name: inflation_layer, type: "costmap_2d::InflationLayer"}
 
